--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ body {
 
 <body>
 
+<div>
 
-<audio id="music" preload loop>
-		<source src="We Wish You A Merry Xmas - Audionautix.mp3" type="audio/mpeg">
-	</audio>
+  <audio src="We Wish You A Merry Xmas - Audionautix.mp3" controls autoplay loop></audio>
+</div>
   
   
 <div>
