--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {
 
 <div>
 
-  <audio src="We Wish You A Merry Xmas - Audionautix.mp3" controls autoplay loop></audio>
+  <audio src="We Wish You A Merry Xmas - Audionautix.mp3" preload controls autoplay loop></audio>
 </div>
 
 
